// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Page 1`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-headerRow"
      >
        <div
          className="a-Page-header"
        >
          <h2
            className="a-Page-title"
          >
            <span
              className="a-TplField"
            >
              <span>
                This is Title
              </span>
            </span>
            <div
              className="a-Remark a-Remark--warning"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <span
                className="a-Remark-icon icon"
              >
                <icon-mock
                  className=" icon-question-mark"
                  icon="question-mark"
                />
              </span>
            </div>
          </h2>
          <small
            className="a-Page-subTitle"
          >
            <span
              className="a-TplField"
            >
              <span>
                This is SubTitle
              </span>
            </span>
          </small>
        </div>
        <div
          className="a-Page-toolbar"
        >
          <span
            className="a-TplField"
          >
            <span>
              This is toolbar
            </span>
          </span>
        </div>
      </div>
      <div
        className="a-Page-body"
      >
        <span
          className="a-TplField"
        >
          <span>
            This is body
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page classNames 1`] = `
<div
  className="a-Page a-Page--withSidebar"
  onClick={[Function]}
>
  <div
    className="a-Page-aside aside-class-name"
  >
    <div
      className="a-TplField a-Page-asideTplWrapper"
    >
      <span>
        This is aside
      </span>
    </div>
  </div>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-headerRow"
      >
        <div
          className="a-Page-header header-class-name"
        >
          <h2
            className="a-Page-title"
          >
            <span
              className="a-TplField"
            >
              <span>
                This is Title
              </span>
            </span>
            <div
              className="a-Remark a-Remark--warning"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <span
                className="a-Remark-icon icon"
              >
                <icon-mock
                  className=" icon-question-mark"
                  icon="question-mark"
                />
              </span>
            </div>
          </h2>
          <small
            className="a-Page-subTitle"
          >
            <span
              className="a-TplField"
            >
              <span>
                This is SubTitle
              </span>
            </span>
          </small>
        </div>
        <div
          className="a-Page-toolbar toolbar-class-name"
        >
          <span
            className="a-TplField"
          >
            <span>
              This is toolbar
            </span>
          </span>
        </div>
      </div>
      <div
        className="a-Page-body body-class-name"
      >
        <span
          className="a-TplField"
        >
          <span>
            This is body
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=ajax & feedback 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              RequestAjax
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <div
            class="a-Spinner-overlay"
          />
          <div
            class="a-Spinner a-Spinner--overlay a-Spinner--lg"
          />
          <span
            class="a-TplField"
          >
            <span>
              The variable a is 6
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=ajax & feedback 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              RequestAjax
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            <span>
              The variable a is 6
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=ajax 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              RequestAjax
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <div
            class="a-Spinner-overlay"
          />
          <div
            class="a-Spinner a-Spinner--overlay a-Spinner--lg"
          />
          <span
            class="a-TplField"
          >
            <span>
              The variable a is 6
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=dialog 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=dialog 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=dialog mergeData 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            <span>
              The variable a is 
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=dialog mergeData 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            <span>
              The variable a is 3
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=drawer 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDrawer
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=drawer 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDrawer
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=drawer mergeData 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDrawer
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            <span>
              The variable a is 
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=drawer mergeData 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDrawer
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            <span>
              The variable a is 3
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi 1`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <div
          className="a-Spinner-overlay"
        />
        <div
          className="a-Spinner a-Spinner--overlay a-Spinner--lg"
        />
        <span
          className="a-TplField"
        >
          <span>
            The variable value is 2
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi error show Message 1`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <div
          className="a-Spinner-overlay"
        />
        <div
          className="a-Spinner a-Spinner--overlay a-Spinner--lg"
        />
        <div
          className="a-Alert a-Alert--danger"
        >
          <button
            className="a-Alert-close"
            onClick={[Function]}
            type="button"
          >
            <icon-mock
              className="icon icon-close"
              icon="close"
            />
          </button>
          Internal Error
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reFetch when condition changes 1`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <div
          className="a-Spinner-overlay"
        />
        <div
          className="a-Spinner a-Spinner--overlay a-Spinner--lg"
        />
        <span
          className="a-TplField"
        >
          <span>
            The variable value is 1
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reFetch when condition changes 2`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <span
          className="a-TplField"
        >
          <span>
            The variable value is 2
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Dialog action 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <div
            class="a-Spinner-overlay"
          />
          <div
            class="a-Spinner a-Spinner--overlay a-Spinner--lg"
          />
          <span
            class="a-TplField"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Dialog action 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Dialog action 3`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            <span>
              The variable value is 2
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Drawer action 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <div
            class="a-Spinner-overlay"
          />
          <div
            class="a-Spinner a-Spinner--overlay a-Spinner--lg"
          />
          <span
            class="a-TplField"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Drawer action 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Drawer action 3`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <div
            class="a-Spinner-overlay"
          />
          <div
            class="a-Spinner a-Spinner--overlay a-Spinner--lg"
          />
          <span
            class="a-TplField"
          >
            <span>
              The variable value is 2
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Form submit 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <div
            class="a-Panel a-Panel--default a-Panel--form"
            style="position: relative;"
          >
            <div
              class="a-Panel-heading"
            >
              <h3
                class="a-Panel-title"
              >
                <span
                  class="a-TplField"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="a-Panel-body"
            >
              <form
                class="a-Form a-Form--normal"
                novalidate=""
              >
                <div
                  class="a-Form-item a-Form-item--normal"
                  data-role="form-item"
                >
                  <div
                    class="a-Form-control a-TextControl"
                  >
                    <div
                      class="a-TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        name="a"
                        placeholder=""
                        size="10"
                        type="text"
                        value="1"
                      />
                    </div>
                  </div>
                </div>
                <input
                  style="display: none;"
                  type="submit"
                />
              </form>
            </div>
            <div
              class="a-Panel-footerWrap"
            >
              <div
                class="a-Panel-btnToolbar a-Panel-footer"
              >
                <button
                  class="a-Button a-Button--default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
        <div
          class="a-Page-body"
        >
          <div
            class="a-Spinner-overlay"
          />
          <div
            class="a-Spinner a-Spinner--overlay a-Spinner--lg"
          />
          <span
            class="a-TplField"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Form submit 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <div
            class="a-Panel a-Panel--default a-Panel--form"
            style="position: relative;"
          >
            <div
              class="a-Panel-heading"
            >
              <h3
                class="a-Panel-title"
              >
                <span
                  class="a-TplField"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="a-Panel-body"
            >
              <form
                class="a-Form a-Form--normal"
                novalidate=""
              >
                <div
                  class="a-Form-item a-Form-item--normal"
                  data-role="form-item"
                >
                  <div
                    class="a-Form-control a-TextControl"
                  >
                    <div
                      class="a-TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        name="a"
                        placeholder=""
                        size="10"
                        type="text"
                        value="2"
                      />
                    </div>
                  </div>
                </div>
                <input
                  style="display: none;"
                  type="submit"
                />
              </form>
            </div>
            <div
              class="a-Panel-footerWrap"
            >
              <div
                class="a-Panel-btnToolbar a-Panel-footer"
              >
                <button
                  class="a-Button a-Button--default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
        <div
          class="a-Page-body"
        >
          <div
            class="a-Spinner-overlay"
          />
          <div
            class="a-Spinner a-Spinner--overlay a-Spinner--lg"
          />
          <span
            class="a-TplField"
          >
            <span>
              The variable value is 2
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by action 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              Reload
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <div
            class="a-Spinner-overlay"
          />
          <div
            class="a-Spinner a-Spinner--overlay a-Spinner--lg"
          />
          <span
            class="a-TplField"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by action 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              Reload
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <div
            class="a-Spinner-overlay"
          />
          <div
            class="a-Spinner a-Spinner--overlay a-Spinner--lg"
          />
          <span
            class="a-TplField"
          >
            <span>
              The variable value is 2
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi show loading 1`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <div
          className="a-Spinner-overlay in"
        />
        <div
          className="a-Spinner in a-Spinner--overlay a-Spinner--lg"
        />
        <span
          className="a-TplField"
        >
          <span>
            The variable value is 
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi show loading 2`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <div
          className="a-Spinner-overlay"
        />
        <div
          className="a-Spinner a-Spinner--overlay a-Spinner--lg"
        />
        <span
          className="a-TplField"
        >
          <span>
            The variable value is 3
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi silentPolling 1`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <div
          className="a-Spinner-overlay in"
        />
        <div
          className="a-Spinner in a-Spinner--overlay a-Spinner--lg"
        />
        <span
          className="a-TplField"
        >
          <span>
            The variable value is 
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi silentPolling 2`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <div
          className="a-Spinner-overlay"
        />
        <div
          className="a-Spinner a-Spinner--overlay a-Spinner--lg"
        />
        <span
          className="a-TplField"
        >
          <span>
            The variable value is 3
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi silentPolling 3`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <span
          className="a-TplField"
        >
          <span>
            The variable value is 3
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi silentPolling 4`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <span
          className="a-TplField"
        >
          <span>
            The variable value is 4
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initData 1`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <span
          className="a-TplField"
        >
          <span>
            The variable value is 1
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initFetchOn trigger initApi fetch when condition becomes ture 1`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <div
          className="a-Spinner-overlay"
        />
        <div
          className="a-Spinner a-Spinner--overlay a-Spinner--lg"
        />
        <span
          className="a-TplField"
        >
          <span>
            The variable value is 6
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page location query 1`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <span
          className="a-TplField"
        >
          <span>
            The variable value is 5
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page location query 2`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <span
          className="a-TplField"
        >
          <span>
            The variable value is 6
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
